# borsaci

./: .env.example  .gitignore  DEPLOYMENT_GUIDE.md  README.md  SECURITY.md  STREAMLIT_README.md  pyproject.toml  requirements-streamlit.txt  streamlit_app.py
src/borsaci/: agent.py  buffett_agent.py  cli.py  cloudcode_provider.py  config.py  google_oauth_provider.py  model.py  oauth.py  prompts.py  updater.py
src/borsaci/utils/: charts.py
