[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "borsaci"
version = "0.1.0"
description = "AI-powered trading assistant"
requires-python = ">=3.11,<4.0"
dependencies = [
    "google-genai>=1.0.0",
    "rich>=13.0.0",
    "prompt_toolkit>=3.0.0",
    "pydantic>=2.0.0",
    "httpx>=0.25.0",
    "cryptography>=41.0.0",
    "streamlit>=1.30.0",
    "plotly>=5.18.0",
    "pandas>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
]

[project.scripts]
borsaci = "borsaci.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[project.urls]
Homepage = "https://github.com/saidsurucu/borsaci"
Repository = "https://github.com/saidsurucu/borsaci"
